# Voice-Box

./: .gitignore  LICENSE  Makefile  README.md  config.example.toml  dictionary.example.txt  pyproject.toml
benchmarks/refiner/: cases.jsonl  profiles.toml  run.py  train.jsonl  train.py
contrib/: Modelfile  echoflow.service  install-deps.sh  voicebox.service
src/echoflow/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/echoflow/core/: audio.py  pipeline.py  refiner.py  transcriber.py
src/echoflow/data/: dictionary.py
src/echoflow/services/: injector.py  niri.py
src/voicebox/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/voicebox/core/: audio.py  pipeline.py  refiner.py  transcriber.py  vad.py
src/voicebox/services/: injector.py  notifier.py  overlay.py
