[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echoflow"
version = "0.1.0"
description = "Linux voice-to-text daemon — record, transcribe, refine, inject"
license = "MIT"
authors = [{ name = "WaffleWaldo" }]
readme = "README.md"
keywords = ["voice", "speech-to-text", "whisper", "wayland", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Wayland",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/WaffleWaldo/EchoFlow"
Repository = "https://github.com/WaffleWaldo/EchoFlow"
Issues = "https://github.com/WaffleWaldo/EchoFlow/issues"

[project.scripts]
echoflow = "echoflow.cli:main"
